Revision history for Module-Metadata

{{$NEXT}}

1.000036  2019-04-18 18:25:15Z
  - properly clean up temp dirs after testing

1.000035  2019-04-18 02:43:11Z
  - quieten noisy tests (issue #31)

1.000034  2018-07-19 20:26:18Z (TRIAL RELEASE)
  - fix how relative paths are absolutized, so they work properly on MSWin32
    (Christian Walde, PR#24)

1.000033  2016-07-24 23:32:58Z
  - fix file operation in tests for VMS

1.000032  2016-04-23 22:36:24Z (TRIAL RELEASE)
  - use a more strict matching heuristic when attempting to infer the
    "primary" module name in a parsed .pm file
  - only report "main" as the module name if code was seen outside another
    namespace, fixing bad results for pod files (RT#107525)

1.000031  2015-11-24 03:57:55Z (TRIAL RELEASE)
  - be less noisy on failure when building as part of perl core (see perl
    RT#126685)

1.000030  2015-11-20 03:03:24Z (TRIAL RELEASE)
  - temp dirs cleaned up during tests (Steve Hay)
  - more accurately mark tests as TODO, so as to have a quieter and less
    confusing test run without passing TODO tests. This release is primarily
    intended for the perl 5.23.5 release.

1.000029  2015-09-11 16:25:43Z (TRIAL RELEASE)
  - fix missing "use" statement in refactored test helper (only affected older
    perls, due to other module interactions)

1.000028  2015-09-11 04:24:39Z (TRIAL RELEASE)
  - refactored and expanded test cases
  - fixed a $VERSION extraction issue on perl 5.6.2 (RT#105978, PR#17)
  - fix the detection of package Foo when $Foo::VERSION is set (RT#85961)

1.000027  2015-04-11 00:21:26Z
  - work around issues with an unconfigured Log::Contextual (Kent Fredric)
  - allow tests to pass in a perl with no taint support (James Raspass)

1.000026  2015-01-17 19:22:34Z
  - patched tests to be less noisy in blead builds (Dave Mitchell, RT#101491)

1.000025  2015-01-04 18:56:00Z
  - evaluate version assignment in a clean environment, to fix assignment in a
    block (RT#101095)
